@@ -9,6 +9,7 @@
 [+] Gestionnaire de médias: possibilité de sélectionner plusieurs fichiers à la fois pour l'upload des fichiers
 [+] Gestionnaire de médias: visionneuse image en cliquant sur l'icône de la photo
 [+] plxUtils::makeThumb - réécriture de la méthode pour générer des images cropées et carré
+[+] Réécriture de la méthode plxShow::pageTitle()
 BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags 
 BUG fix #102: Thème par défaut - la sidebar passe dans le footer après désactivation du captcha
 BUG fix #103: La recherche dans les articles ne fonctionne dans l'administration pas à partir du champ "Rechercher"
